sdo data tag, suite, and profile